--- a/bank.html
+++ b/bank.html
@@ -12,7 +12,35 @@
         <h1 class="text-5xl text-center mt-6">Lets get some <span class="font-semibold text-violet-600">Moooooney!!!</span></h1>
     </header>
     <main>
-
+        <section class="mt-12">
+            <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto text-white">
+                <div class="bg-green-400 p-8 rounded-xl">
+                    <h1 class="text-2xl">deposit</h1>
+                    <h4 class="text-5xl">$00</h4>
+                </div>
+                <div class="bg-yellow-500 p-8 rounded-xl">
+                    <h1 class="text-2xl">Withdraw</h1>
+                    <h4 class="text-5xl">$00</h4>
+                </div>
+                <div class="bg-violet-500 p-8 rounded-xl">
+                    <h1 class="text-2xl">Balance</h1>
+                    <h4 class="text-5xl">$1240</h4>
+                </div>
+            </div>
+        </section>
+        <!-- deposite and withdraw -->
+        <section class="mt-12">
+            <div class="grid grid-cols-2 gap-4 w-9/12 mx-auto text-white">
+                <div class="bg-green-400 p-8 rounded-xl">
+                    <h1 class="text-2xl">deposit</h1>
+                    <h4 class="text-5xl">$00</h4>
+                </div>
+                <div class="bg-yellow-500 p-8 rounded-xl">
+                    <h1 class="text-2xl">Withdraw</h1>
+                    <h4 class="text-5xl">$00</h4>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
