--- a/bank.html
+++ b/bank.html
@@ -31,13 +31,16 @@
         <!-- deposite and withdraw -->
         <section class="mt-12">
             <div class="grid grid-cols-2 gap-4 w-9/12 mx-auto text-white">
-                <div class="bg-green-400 p-8 rounded-xl">
-                    <h1 class="text-2xl">deposit</h1>
-                    <h4 class="text-5xl">$00</h4>
+                <div class="bg-fuchsia-400 p-8 rounded-xl">
+                    <h1 class="text-2xl mb-4">Please deposit</h1>
+                    <input class="w-9/12 block mb-2 px-3" type="email" name="" id="deposit-field" placeholder="$Amount you want to deposit">
+                    <button id="btn-deposit" class="bg-amber-600  px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700">Deposit</button>
+                    
                 </div>
-                <div class="bg-yellow-500 p-8 rounded-xl">
-                    <h1 class="text-2xl">Withdraw</h1>
-                    <h4 class="text-5xl">$00</h4>
+                <div class="bg-sky-300 p-8 rounded-xl">
+                    <h1 class="text-2xl mb-4">Please Withdraw</h1>
+                    <input class="w-9/12 block mb-2 px-3" type="email" name="" id="user-email" placeholder="$Amount you want to withdraw">
+                    <button id="btn-withdraw" class="bg-amber-600  px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700">Withdraw</button>
                 </div>
             </div>
         </section>
