--- a/bank.html
+++ b/bank.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="bg-yellow-500 p-8 rounded-xl">
                     <h1 class="text-2xl">Withdraw</h1>
-                    <h4 class="text-5xl">$00</h4>
+                    <h4 class="text-5xl">$<span id="withdraw-total">00</span> </h4>
                 </div>
                 <div class="bg-violet-500 p-8 rounded-xl">
                     <h1 class="text-2xl">Balance</h1>
@@ -39,12 +39,13 @@
                 </div>
                 <div class="bg-sky-300 p-8 rounded-xl">
                     <h1 class="text-2xl mb-4 text-white">Please Withdraw</h1>
-                    <input class="w-9/12 block mb-2 px-3" type="email" name="" id="user-email" placeholder="$Amount you want to withdraw">
+                    <input class="w-9/12 block mb-2 px-3" type="email" name="" id="withdraw-field" placeholder="$Amount you want to withdraw">
                     <button id="btn-withdraw" class="bg-amber-600  px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700">Withdraw</button>
                 </div>
             </div>
         </section>
     </main>
     <script src="js/deposit.js"></script>
+    <script src="js/withdraw.js"></script>
 </body>
 </html>
